@startuml

class Etudiant {
    - resultats : Map <String, List<Float>>
    + Etudiant (Identite, Formation)
    + ajouterNote (String, float): booleen
    + calculerMoyenneMatiere (String) : float
    + calculerMoyenneGen (): float
    + getResultats(): Map<String, List<Float>>
    + getFormation(): Formation

}

class Identite {
    - nip : String
    - nom : String
    - prenom : String
    + Identite(String, String, String)
    + getNip(): String
    + getNom(): String
    + getPrenom(): String
}

class Formation {
    - id : String
    - matieres : Map<String, Integer>
    + Formation (String)
    + ajouterMatiere(String, int)
    + supprimerMatiere(String)
    + getCoeff(String): int
    + getMatiere(): Map<String, Integer>
}

class Groupe {
    - formation : Formation
    + ajouterEtudiant (Etudiant): boolean
    + supprimerEtudiant (Etudiant): boolean
    + calculerMoyenneMatiere (String) : float
    + calculerMoyenneGen (): float
}

Etudiant "1" --> "1" Identite : - id
Etudiant "1" --> "*" Formation : - formation
Groupe "1" --> "*" Etudiant : etudiants

@enduml